--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.8",
+    "mongoose-sequence": "^5.3.0",
     "path": "^0.12.7"
   }
 }
