--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@hapi/joi-date": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "joi-phone-number": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "mongoose-sequence": "^5.3.0",
     "path": "^0.12.7"
