--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     "bootstrap": "^4.5.3",
     "connected-react-router": "^6.8.0",
     "history": "^5.0.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
